objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Asset_Availability__c</fullName>
        <label>Asset Availability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Combo__c</fullName>
        <formula>Name&amp;&quot;  -  DOP:  &quot;&amp;TEXT(InstallDate)&amp;&quot;  Ser #:  &quot;&amp;SerialNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Combo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Downtime__c</fullName>
        <label>Asset Downtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Reliability__c</fullName>
        <label>Asset Reliability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Unplanned_Downtime__c</fullName>
        <label>Asset Unplanned Downtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Repair_Time__c</fullName>
        <label>Average Repair Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Time_Between_Failures__c</fullName>
        <label>Average Time Between Failures</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>B2B_Product_Image_URI__c</fullName>
        <label>B2B Product Image URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>B2B_Warranty_Warning__c</fullName>
        <formula>IF( ISPICKVAL(Entitlement_Status__c, &apos;30 Day Warning&apos;), &apos;Act Now&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B Warranty Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Users_Asset__c</fullName>
        <description>True if the asset belongs to the currently-logged in user.</description>
        <formula>ContactId =  $User.ContactId</formula>
        <label>Current User&apos;s Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Users_Companys_Asset__c</fullName>
        <description>Checked if the current user&apos;s company owns the asset.</description>
        <formula>AccountId =  $User.Account_Id_Formula__c</formula>
        <label>Current User&apos;s Company&apos;s Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <defaultValue>300</defaultValue>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entitlement_Status__c</fullName>
        <label>Warranty Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>30 Day Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(Product2.purl__c, &quot;Product&quot;,40,40)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <formula>Location.VisitorAddress.Latitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <formula>Location.VisitorAddress.Longitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Expiration_Date__c</fullName>
        <description>What: Asset
Who: Bill Macaulay When: Oct 2022
Add fields to Assets populated from shipment items</description>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Lot_Number__c</fullName>
        <description>What: Shipment item
Who: Bill Macaulay When: Oct 2022
Add fields to Asset</description>
        <label>Lot Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Perform_Status__c</fullName>
        <description>Used by SMS Process Builder to fire message notification when Performace_Status__c = Low</description>
        <inlineHelpText>Used by SMS Process Builder to fire message notification when Performace_Status__c = Low</inlineHelpText>
        <label>Performance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Warranty_Services__c</fullName>
        <label>Warranty Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Servicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the asset should have recurring scheduled servicing take place</description>
        <label>Scheduled Servicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Frequency_Weeks__c</fullName>
        <description>If an asset is flagged for servicing, how often should it be serviced</description>
        <label>Service Frequency (Weeks)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>12 Months</fullName>
                </value>
                <value>
                    <fullName>18 Months</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Products__c</fullName>
        <label>Suggested Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product 1</fullName>
                </value>
                <value>
                    <fullName>Product 2</fullName>
                </value>
                <value>
                    <fullName>Product 3</fullName>
                </value>
                <value>
                    <fullName>Training Services</fullName>
                </value>
                <value>
                    <fullName>Technical Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalUsageUOM__c</fullName>
        <label>TotalUsageUOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalUsage__c</fullName>
        <defaultValue>500</defaultValue>
        <label>TotalUsage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;), 
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)), 
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)) 
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Indicator__c</fullName>
        <formula>IMAGE(CASE( Entitlement_Status__c, 
&quot;Expired&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/error.png&quot;, 
&quot;Active&quot;,&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/check.png&quot;, 
&quot;30 Day Warning&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/warning.png&quot;, 
&quot;https://sdo-master.s3.us-west-1.amazonaws.com/icons/check.png&quot;),&quot;Active Contract?&quot;,24,24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>db_days_InstallDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>InstallDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_PurchaseDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>PurchaseDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>db_days_UsageEndDate__c</fullName>
        <description>This is for the Perfect Date Wizard Tool (v2)</description>
        <label>UsageEndDate db days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>